--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -428,7 +428,7 @@
 
     height:1px;
 
-    background-color: rgba(255, 255, 255, 0.08) !important;
+    background-color: var(--border-strong) !important;
 
 }
 
