--- a/assets/css/table.css
+++ b/assets/css/table.css
@@ -102,3 +102,12 @@
         width:100%;
     }
 }
+
+/* Pagination Active Override */
+.dataTables_wrapper .dataTables_paginate .paginate_button.current,
+.dataTables_wrapper .dataTables_paginate .paginate_button.current:hover,
+.page-item.active .page-link {
+    background: var(--primary) !important;
+    border-color: var(--primary) !important;
+    color: #ffffff !important;
+}
